<resources>
    <string name="app_name">FloridaManUhOH</string>
    <string name="log_in">Log in:</string>
    <string name="go">Go</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_game_time">GameTime</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete_data">Delete Data</string>
    <string name="florida_man_game">Florida Man Game</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="return_to_menu">RETURN TO MENU</string>
</resources>