<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameTime">

    <TextView
        android:id="@+id/body"
        android:layout_width="348dp"
        android:layout_height="229dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="28dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/gameGo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="15dp"
        android:onClick="submitAnswer"
        android:text="@string/go"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/title"
        android:layout_width="339dp"
        android:layout_height="58dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="40dp"
        android:text="@string/florida_man_game"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toTopOf="@+id/gameGo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/body">

        <RadioButton
            android:id="@+id/op1"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/option_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/op2"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/option_2"
            android:translationX="150dp"
            android:translationY="-50dp" />

        <RadioButton
            android:id="@+id/op3"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/option_3"
            android:translationY="-50dp" />

        <RadioButton
            android:id="@+id/op4"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/option_4"
            android:translationX="150dp"
            android:translationY="-100dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/stats"
        android:layout_width="382dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="3dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>